; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlFillMemoryUlong.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlFillMemoryUlong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pRtlFillMemoryUlong = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"RtlFillMemoryUlong is not available\0A\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"This is a test!\00", align 1
@.str.2 = private unnamed_addr constant [16 x i8] c"xxxx is a test!\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"xxxxxxxxa test!\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RtlFillMemoryUlong to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RtlFillMemoryUlong() #0 {
  %1 = alloca i8, align 1
  store i8 120, i8* %1, align 1
  %2 = load i32, i32* @pRtlFillMemoryUlong, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = call i32 @win_skip(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0))
  br label %27

6:                                                ; preds = %0
  %7 = call i32 @LFILL(i32 0)
  %8 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @LFILL(i32 1)
  %10 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %11 = call i32 @LFILL(i32 2)
  %12 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %13 = call i32 @LFILL(i32 3)
  %14 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @LFILL(i32 4)
  %16 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %17 = call i32 @LFILL(i32 5)
  %18 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %19 = call i32 @LFILL(i32 6)
  %20 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %21 = call i32 @LFILL(i32 7)
  %22 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %23 = call i32 @LFILL(i32 8)
  %24 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  %25 = call i32 @LFILL(i32 9)
  %26 = call i32 @CMP(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  br label %27

27:                                               ; preds = %6, %4
  ret void
}

declare dso_local i32 @win_skip(i8*) #1

declare dso_local i32 @LFILL(i32) #1

declare dso_local i32 @CMP(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
